--- a/src/components/HappyThought.css
+++ b/src/components/HappyThought.css
@@ -30,7 +30,7 @@
 .happy-thought__likes {
   display: flex;
   align-items: center;
-  gap: 0.25rem;
+  gap: 0;
 
   p {
     position: relative;
@@ -48,25 +48,36 @@
 .happy-thought__like-btn {
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 2.25rem;
   width: 2.25rem;
   border-radius: 2.25rem;
   border: none;
+  padding: 0;
+
+  position: relative;
+  left: -0.25rem;
 
   font-size: 1.25em;
   cursor: pointer;
 
   background-color: transparent;
 
-  &:hover {
-    background-color: var(--gray-200);
-  }
-
   &.is-disabled {
     cursor: not-allowed;
 
     &:hover {
       background-color: transparent;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    height: 2.25rem;
+    width: 2.25rem;
+    border-radius: 2.25rem;
+
+    &:hover {
+      background-color: var(--gray-200);
     }
   }
 }
